[gd_scene load_steps=3 format=3 uid="uid://cjqyvhm6jlpda"]

[ext_resource type="Script" path="res://assets/scripts/GUI/user_interface.gd" id="1_cyksa"]

[sub_resource type="GDScript" id="GDScript_nsihl"]
script/source = "extends VBoxContainer

@onready var next_level = $WinScreen/GridContainer/NextLevel
@onready var back_to_menu = $WinScreen/GridContainer/BackToMenu
var MAIN_MENU

# Called when the node enters the scene tree for the first time.
func _ready():
	self.visible = false



func _on_next_level_pressed():
	pass # Replace with function body.


func _on_back_to_menu_pressed():
	get_tree().change_scene(MAIN_MENU)
"

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_cyksa")
pause_menu = "res://assets/GUI/pause_menu.tscn"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Hint" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Hint"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Pause" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "||"

[node name="WinContainer" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
script = SubResource("GDScript_nsihl")

[node name="WinScreen" type="GridContainer" parent="MarginContainer/WinContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15

[node name="Win" type="Label" parent="MarginContainer/WinContainer/WinScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Congratulations!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="YourTime" type="Label" parent="MarginContainer/WinContainer/WinScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "You completed on:"
horizontal_alignment = 1

[node name="StopwatchLabel" type="Label" parent="MarginContainer/WinContainer/WinScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0:00.0"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/WinContainer/WinScreen"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20

[node name="NextLevel" type="Button" parent="MarginContainer/WinContainer/WinScreen/GridContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Next Level"

[node name="TryAgain" type="Button" parent="MarginContainer/WinContainer/WinScreen/GridContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Try again"

[node name="BackToMenu" type="Button" parent="MarginContainer/WinContainer/WinScreen/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back to menu"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="MarginContainer/WinContainer/WinScreen/GridContainer/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="MarginContainer/WinContainer/WinScreen/GridContainer/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="MarginContainer/WinContainer/WinScreen/GridContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
